[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Roboto-Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://GameOverScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = SubResource( 1 )

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="GameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.0
margin_top = -59.0
margin_right = 279.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"

[node name="RestartPrompt" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = 63.0
margin_right = 204.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 1 )
text = "Press 'R' to restart"
align = 1
valign = 1

[node name="NewHighScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.5
margin_top = -407.0
margin_right = 239.5
margin_bottom = -347.0
custom_fonts/font = ExtResource( 1 )
text = "NEW HIGH SCORE!!!!!"
align = 1
valign = 1

[node name="TimeBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 129.0
margin_top = -231.0
margin_right = 374.0
margin_bottom = -107.0

[node name="Label" type="Label" parent="TimeBox"]
margin_right = 245.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "Your Time:"
align = 1

[node name="Time" type="Label" parent="TimeBox"]
margin_top = 64.0
margin_right = 245.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 1 )
text = "00:00:00"
align = 1

[node name="HighScore" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.0
margin_top = -231.0
margin_right = -102.0
margin_bottom = -107.0

[node name="Label" type="Label" parent="HighScore"]
margin_right = 261.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "High Score:"
align = 1

[node name="Time" type="Label" parent="HighScore"]
margin_top = 64.0
margin_right = 261.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 1 )
text = "00:00:00"
align = 1
